--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>404 Not Found</title>
+    <title><%= title %></title>
+    <!-- Đây là nơi tiêu đề sẽ được nhúng -->
     <link rel="stylesheet" type="text/css" href="/css/404.css" />
   </head>
   <body>
     <div class="container">
-      <h1>404</h1>
+      <img
+        style="border-radius: 20px"
+        src="https://img.freepik.com/free-vector/404-error-with-landscape-concept-illustration_114360-7898.jpg?size=626&ext=jpg&ga=GA1.1.1395880969.1709424000&semt=sph"
+      />
       <p>Oops! Trang bạn tìm kiếm không tồn tại.</p>
       <p><a href="/">Quay lại trang chủ</a></p>
     </div>
