modify background image

--- a/views/authentication/signUp.ejs
+++ b/views/authentication/signUp.ejs
@@ -19,7 +19,7 @@
 
       <!-- Sign Up Start -->
       <div class="container-fluid">
-        <div class="row h-100 align-items-center justify-content-center" style="min-height: 100vh">
+        <div class="row h-100 align-items-center justify-content-center" style="min-height: 100vh; background-image: url('https://i.pinimg.com/originals/bd/ac/32/bdac327b05ddaa05216dfa08c9e734c3.jpg');background-size: cover;">
           <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
             <div class="bg-light rounded p-4 p-sm-5 my-4 mx-3">
               <div class="d-flex align-items-center justify-content-between mb-3">
