--- a/views/dashboard/courses.ejs
+++ b/views/dashboard/courses.ejs
@@ -90,7 +90,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save</button>
+                <button type="submit" class="btn btn-primary">Save</button>
               </div>
             </form>
 
@@ -136,7 +136,7 @@
                   <td> <img style="height: 20%; width: 40%; border-radius: 20px;" src=" <%= course.courseImage%>" alt="image <%= course.courseName %>"> </td>
                   <td style="display: flex; justify-content: space-between;">
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#<%= index %>modify"><i class="bi bi-eye-fill"></i></button>
-                    <button type="button" class="btn btn-danger" data-target="#<%= index %>delete" data-toggle="modal" data-target="#<% course._id %>delete">
+                    <button type="button" class="btn btn-danger"  data-toggle="modal" data-target="#<%= course._id %>delete">
                       <i class="bi bi-trash2-fill"></i>
                     </button>
                   </td>
@@ -187,21 +187,22 @@
 
 
                 <!-- for Delete -->
-                <div class="modal fade" id="<% course._id %>delete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade" id="<%= course._id %>delete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Delete Section</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">Delete Courses</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
                         </button>
                       </div>
                       <div class="modal-body">
-                        <h6>Confirm Delete Section <%= course.courseName %></h6>
+                        <h6>Confirm Delete Course <%= course.courseName %></h6>
+                        <p>If you delete this course, all section that related to this course will be delete, Are you sure you want to delete this course</p>
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-                        <button type="button" class="btn btn-primary">Yes</button>
+                        <a href="/course/delete/<%= course._id %>" class="btn btn-primary">Yes</a>
                       </div>
                     </div>
                   </div>
