--- a/views/authentication/signIn.ejs
+++ b/views/authentication/signIn.ejs
@@ -26,7 +26,7 @@
                 <h3>Sign In</h3>
               </div>
               <% if (typeof message !== 'undefined') { %>
-                <p><%= message %></p>
+                <p style="font-weight: bold; text-align: center;"><%= message %></p>
               <% } %>
               <form method="post" action="/member/signIn">
                 <div class="form-floating mb-3">
