update separate view and api and update function api for course and validate for create section

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %></title>
-    <!-- Đây là nơi tiêu đề sẽ được nhúng -->
     <link rel="stylesheet" type="text/css" href="/css/404.css" />
   </head>
   <body>
@@ -13,8 +12,8 @@
         style="border-radius: 20px"
         src="https://img.freepik.com/free-vector/404-error-with-landscape-concept-illustration_114360-7898.jpg?size=626&ext=jpg&ga=GA1.1.1395880969.1709424000&semt=sph"
       />
-      <p>Oops! Trang bạn tìm kiếm không tồn tại.</p>
-      <p><a href="/">Quay lại trang chủ</a></p>
+      <p>Oops! Not Found Pages</p>
+      <p><a href="/view/signIn">Back To Login</a></p>
     </div>
   </body>
 </html>
