--- a/views/authentication/signIn.ejs
+++ b/views/authentication/signIn.ejs
@@ -28,7 +28,7 @@
               <% if (typeof message !== 'undefined') { %>
                 <p style="font-weight: bold; text-align: center;"><%= message %></p>
               <% } %>
-              <form method="post" action="/member/signIn">
+              <form method="post" action="/view/member/signIn">
                 <div class="form-floating mb-3">
                   <input
                     name="username"
