--- a/views/authentication/signUp.ejs
+++ b/views/authentication/signUp.ejs
@@ -28,7 +28,7 @@
               <% if (typeof message !== 'undefined') { %>
                 <p><%= message %></p>
               <% } %>
-              <form method="POST" action="/member/signUp">
+              <form method="POST" action="/view/member/signUp">
                 <div class="form-floating mb-3">
                   <input
                     name="username"
